--- a/registro.html
+++ b/registro.html
@@ -12,17 +12,17 @@
 
     <form action="registro.php" method="post">
         Nombre:
-        <input type="text" name="nombre" id="nombre" required><br><br> Apellidos:
-        <input type="text" name="apellido" id="apellidos" required><br><br> Email:
-        <input type="email" name="email" id="email" required><br><br> Contraseña:
-        <input type="password" name="password" id="password" required><br><br> Confirmar Contraseña:
-        <input type="password" name="confirmarpassword" id="confirmarPassword" required><br><br> Genero:
-        <select name="genero" id="">
+        <input type="text" name="nombres" id="nombres"><br><br> Apellidos:
+        <input type="text" name="apellidos" id="apellidos"><br><br> Email:
+        <input type="email" name="email" id="email"><br><br> Contraseña:
+        <input type="password" name="password" id="password"><br><br> Confirmar Contraseña:
+        <input type="password" name="confirmarPassword" id="confirmarPassword"><br><br> Genero:
+        <select name="genero" id="genero">
             <option value="">Seleccione Genero</option>
             <option value="Masculino">Masculino</option>
             <option value="Femenino">Femenino</option>
         </select><br> Curso de interes:
-        <select name="curso" id="">
+        <select name="curso" id="curso">
             <option value="">Seleccione Curso</option>
             <option value="desarrolloweb">Desarrollo Web</option>
             <option value="diseñografico">Diseño Grafico</option>
